# newrons

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  turbo.json  vercel.json
.github/workflows/: ci.yml
apps/api/: package.json  tsconfig.json  vercel.json
apps/mobile/: package.json  (+1 more)
docs/: ARCHITECTURE.md  MVP_ROADMAP.md  SOVEREIGN_OS.md
supply-chain-os/: .gitignore  Cargo.toml  package.json  tsconfig.json  turbo.json
supply-chain-os/apps/desktop/: package.json  vite.config.ts
supply-chain-os/apps/desktop/src/: main.tsx
supply-chain-os/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
supply-chain-os/apps/desktop/src-tauri/src/: lib.rs  main.rs
supply-chain-os/apps/desktop/src-tauri/src/commands/: chain.rs  forecasting.rs  identity.rs  inventory.rs  mod.rs  peers.rs  procurement.rs  quality.rs  routes.rs  warehouse.rs
supply-chain-os/apps/desktop/src-tauri/src/daemon/: mod.rs
supply-chain-os/apps/desktop/src/components/: AppShell.tsx
supply-chain-os/apps/desktop/src/components/forecasting/: ForecastingScreenIntegration.example.tsx  LogosSignals.tsx
supply-chain-os/apps/desktop/src/lib/: router.tsx  tauri.ts
supply-chain-os/apps/desktop/src/screens/: ChainInspectorScreen.tsx  DashboardScreen.tsx  ForecastingScreen.tsx  InventoryScreen.tsx  OnboardingScreen.tsx  PeersScreen.tsx  ProcurementScreen.tsx  QualityScreen.tsx  RoutesScreen.tsx  WarehouseScreen.tsx
supply-chain-os/apps/desktop/src/styles/: globals.css
supply-chain-os/apps/mobile/: package.json
supply-chain-os/apps/mobile/src/: App.tsx
supply-chain-os/apps/mobile/src/components/delivery/: PodCapture.tsx
supply-chain-os/apps/mobile/src/components/scanner/: BarcodeScanner.tsx
supply-chain-os/apps/mobile/src/components/warehouse/: PickTask.tsx
supply-chain-os/apps/mobile/src/screens/: RoutesScreen.tsx  ScanScreen.tsx  WarehouseScreen.tsx
(+110 files in other folders)
